--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
       <div class="block bg-white shadow-md rounded-lg p-6 hover:bg-blue-50 transition">
         <h3 class="text-lg font-semibold text-blue-700">2. CSS Styling</h3>
         <p>Applying style to an HTML page using CSS.</p>
-        <a href="#" target="_blank" class="text-blue-700 hover:text-blue-900">View My Experiment</a>
+        <a href="bookstore.html" target="_blank" class="text-blue-700 hover:text-blue-900">View My Experiment</a>
       </div>
       <div class="block bg-white shadow-md rounded-lg p-6 hover:bg-blue-50 transition">
         <h3 class="text-lg font-semibold text-blue-700">3. JavaScript Programming</h3>
         <p>a. Displaying and comparing date<br>b. Form validation (text field, radio buttons, check boxes, etc.)</p>
-        <a href="#" target="_blank" class="text-blue-700 hover:text-blue-900">View My Experiment</a>
+        <a href="bookstore.html" target="_blank" class="text-blue-700 hover:text-blue-900">View My Experiment</a>
       </div>
       <div class="block bg-white shadow-md rounded-lg p-6 hover:bg-blue-50 transition">
         <h3 class="text-lg font-semibold text-blue-700">4. Online Applications using PHP</h3>
@@ -100,3 +100,5 @@
   </footer>
 </body>
 </html>
+
+
