--- a/register.html
+++ b/register.html
@@ -10,10 +10,11 @@
       background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
                   url('login.png') no-repeat center center fixed;
       background-size: cover;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 20px;
     }
 
     .overlay {
@@ -23,8 +24,9 @@
       padding: 40px;
       border-radius: 20px;
       box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
-      width: 400px;
-      color: white;
+      width: 100%;
+      max-width: 450px;
+      color: #fff;
     }
 
     h2 {
@@ -36,23 +38,33 @@
 
     label {
       font-weight: bold;
-      color: #ffffff;
       display: block;
       margin-bottom: 5px;
+      margin-top: 10px;
+      color: #ffeb99;
       text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
     }
 
-    input[type="text"],
-    input[type="email"],
-    input[type="password"] {
+    input, select, textarea {
       width: 100%;
       padding: 10px;
       margin-bottom: 16px;
-      border: none;
+      border: 1px solid #ccc;
       border-radius: 8px;
-      background: rgba(255,255,255,0.9);
-      box-sizing: border-box;
+      background: rgba(255,255,255,0.95);
       font-size: 14px;
+      box-sizing: border-box;
+      color: #000;
+    }
+
+    input[type="radio"], input[type="checkbox"] {
+      width: auto;
+      margin-right: 8px;
+    }
+
+    textarea {
+      resize: none;
+      height: 60px;
     }
 
     .button-group {
@@ -99,21 +111,41 @@
 
   <div class="overlay">
     <h2>Registration</h2>
-    <form action="register_process.php" method="post">
-      <label for="fullname">Full Name</label>
-      <input type="text" id="fullname" name="fullname" required>
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" required>
+    <form action="register_process.php" method="post" onsubmit="return checkPasswords()">
+      <label for="name">Full Name</label>
+      <input type="text" id="name" name="name" placeholder="Enter your full name" required>
 
       <label for="password">Password</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" placeholder="Enter your password" required>
 
       <label for="confirm_password">Confirm Password</label>
-      <input type="password" id="confirm_password" name="confirm_password" required>
+      <input type="password" id="confirm_password" name="confirm_password" placeholder="Re-enter your password" required>
+
+      <label for="email">E-mail ID</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+      <label for="phone">Phone Number</label>
+      <input type="text" id="phone" name="phone" placeholder="Enter your phone number" required>
+
+      <label>Sex</label>
+      <input type="radio" id="male" name="sex" value="Male" required>
+      <label for="male" style="display:inline; color:#fff;">Male</label>
+      <input type="radio" id="female" name="sex" value="Female" required>
+      <label for="female" style="display:inline; color:#fff;">Female</label>
+
+      <label for="dob">Date of Birth</label>
+      <input type="date" id="dob" name="dob" required>
+
+      <label>Languages Known</label>
+      <div style="color:#fff;">
+        <input type="checkbox" name="languages[]" value="English"> English
+        <input type="checkbox" name="languages[]" value="Malayalam"> Malayalam
+        <input type="checkbox" name="languages[]" value="Hindi"> Hindi
+        <input type="checkbox" name="languages[]" value="Tamil"> Tamil
+      </div>
+
+      <label for="address">Address</label>
+      <textarea id="address" name="address" placeholder="Enter your address" required></textarea>
 
       <div class="button-group">
         <button type="reset">Reset</button>
@@ -125,6 +157,18 @@
       </div>
     </form>
   </div>
+
+  <script>
+    function checkPasswords() {
+      let pass = document.getElementById("password").value;
+      let confirmPass = document.getElementById("confirm_password").value;
+      if (pass !== confirmPass) {
+        alert("Passwords do not match!");
+        return false;
+      }
+      return true;
+    }
+  </script>
 
 </body>
 </html>
