--- a/cart.html
+++ b/cart.html
@@ -8,41 +8,35 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f0f8ff;
       padding: 30px;
+      margin: 0;
     }
-
     h2 {
       text-align: center;
       color: #003366;
       margin-bottom: 30px;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
       background-color: white;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
     th, td {
       border: 1px solid #ccc;
       padding: 12px;
       text-align: center;
     }
-
     th {
       background-color: #003366;
       color: white;
     }
-
     tr:hover {
       background-color: #f9f9f9;
     }
-
     img.book-cover {
       width: 60px;
       border-radius: 4px;
     }
-
     .remove-btn {
       padding: 6px 10px;
       background-color: #cc0000;
@@ -51,11 +45,9 @@
       border-radius: 6px;
       cursor: pointer;
     }
-
     .remove-btn:hover {
       background-color: #990000;
     }
-
     .total-row td {
       font-weight: bold;
       font-size: 18px;
@@ -63,12 +55,11 @@
       padding-right: 20px;
       color: #003366;
     }
-
     .checkout-btn {
       margin-top: 20px;
       display: block;
-      width: 200px;
-      padding: 10px;
+      width: 220px;
+      padding: 12px;
       font-size: 16px;
       background-color: #003366;
       color: white;
@@ -78,10 +69,18 @@
       text-align: center;
       margin-left: auto;
       margin-right: auto;
+      text-decoration: none;
+      outline: none;
     }
-
     .checkout-btn:hover {
       background-color: #005599;
+    }
+    input.quantity-input {
+      width: 50px;
+      text-align: center;
+      padding: 5px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
   </style>
 </head>
@@ -89,40 +88,82 @@
 
   <h2>Your Shopping Cart</h2>
 
-  <table>
-    <tr>
-      <th>Cover</th>
-      <th>Book Title</th>
-      <th>Price</th>
-      <th>Quantity</th>
-      <th>Remove</th>
-    </tr>
-
-    <!-- Example Cart Item 1 -->
-    <tr>
-      <td><img src="xmlbook.jpg" alt="XML Bible" class="book-cover"></td>
-      <td>XML Bible</td>
-      <td>₹40.50</td>
-      <td>1</td>
-      <td><button class="remove-btn">Remove</button></td>
-    </tr>
-
-    <!-- Example Cart Item 2 -->
-    <tr>
-      <td><img src="aibook.jpg" alt="AI Book" class="book-cover"></td>
-      <td>Artificial Intelligence</td>
-      <td>₹63.00</td>
-      <td>1</td>
-      <td><button class="remove-btn">Remove</button></td>
-    </tr>
-
-    <!-- Total -->
-    <tr class="total-row">
-      <td colspan="5">Total: ₹103.50</td>
-    </tr>
+  <table id="cart-table">
+    <thead>
+      <tr>
+        <th>Cover</th>
+        <th>Book Title</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Remove</th>
+      </tr>
+    </thead>
+    <tbody id="cart-body">
+      <!-- Cart items will be loaded here -->
+    </tbody>
+    <tfoot>
+      <tr class="total-row">
+        <td colspan="5">Total: ₹0.00</td>
+      </tr>
+    </tfoot>
   </table>
 
-  <button class="checkout-btn">Proceed to Checkout</button>
+  <a href="payment.html" class="checkout-btn">Proceed to Checkout</a>
+
+  <script>
+    function loadCart() {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      let cartBody = document.getElementById("cart-body");
+      cartBody.innerHTML = "";
+      let total = 0;
+
+      cart.forEach((item, index) => {
+        let row = document.createElement("tr");
+
+        row.innerHTML = `
+          <td><img src="${item.image}" alt="${item.title}" class="book-cover"></td>
+          <td>${item.title}</td>
+          <td>₹${parseFloat(item.price).toFixed(2)}</td>
+          <td>
+            <input type="number" min="1" value="${item.quantity}" class="quantity-input" data-index="${index}">
+          </td>
+          <td><button class="remove-btn" data-index="${index}">Remove</button></td>
+        `;
+
+        cartBody.appendChild(row);
+        total += parseFloat(item.price) * item.quantity;
+      });
+
+      document.querySelector(".total-row td").textContent = `Total: ₹${total.toFixed(2)}`;
+
+      // Remove functionality
+      document.querySelectorAll(".remove-btn").forEach(button => {
+        button.addEventListener("click", function () {
+          let index = this.dataset.index;
+          cart.splice(index, 1);
+          localStorage.setItem("cart", JSON.stringify(cart));
+          loadCart();
+        });
+      });
+
+      // Quantity change functionality
+      document.querySelectorAll(".quantity-input").forEach(input => {
+        input.addEventListener("change", function () {
+          let index = this.dataset.index;
+          let newQty = parseInt(this.value);
+          if (isNaN(newQty) || newQty < 1) {
+            this.value = cart[index].quantity; // Reset to previous value
+            return;
+          }
+          cart[index].quantity = newQty;
+          localStorage.setItem("cart", JSON.stringify(cart));
+          loadCart();
+        });
+      });
+    }
+
+    loadCart();
+  </script>
 
 </body>
-</html> 
+</html>
